# scargo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml  overrides.csv
.github/workflows/: ci.yml
dashboard/static/: app.js  auth.html  auth.js  dropbox.html  dropbox.js  index.html  vehicles.html  vehicles.js
docs/: dashboard-creative-direction.md  deployment-options.md  deployment.md  dropbox-ingest.md  metric-policy.md  monetization-strategy.md  privacy-model.md  roadmap.md
scripts/: analyze-telemetry.py  backfill-vehicle-metadata.py  dev.sh  fetch-vin-decodes.py  local-auth.py  reset-dev-db.sh  rollup-retention-report.py  scan-and-ingest.py  smoke-docker.sh
src/: bulk.rs  dropbox_worker.rs  lib.rs  main.rs
src/api/: auth.rs  channels.rs  cohort.rs  dashboard.rs  dropbox.rs  ingest.rs  latest.rs  mod.rs  pairs.rs  privacy.rs  query.rs  routes.rs  shared_link_ingest.rs  summary.rs  trends.rs  vehicles.rs
src/config/: error.rs  mod.rs  settings.rs
src/db/: migrate.rs  mod.rs
src/ingest/: canonical.rs  csv.rs  mod.rs  model.rs  vin.rs
test_data/DEMO-HONDA-ACCORD/: CSVLog_compact_imperial.csv  CSVLog_compact_metric.csv
test_data/DEMO-HONDA-HRV/: CSVLog_compact_absolute_timestamp.csv
tests/: smoke_stack.rs
todo/cohort-coverage-beta-access/: PLAN.md
todo/docs-roadmap-refresh/: PLAN.md
todo/dropbox-ingest-operability/: PLAN.md
todo/hosted-beta-onboarding/: PLAN.md
todo/maintenance-inference-v1/: PLAN.md
todo/owner-health-report-v1/: PLAN.md
todo/shared-link-ingest/: PLAN.md
(+24 files in other folders)
